fix : 기획변경에 따른 여행 생성 API, 여행 조회 API 수정 (#112)
* fix: 기획변경에 따른 여행 생성 API 수정
- 소개글 70자로 Max 변경
- 여행 생성 시 HashTag 값 수정
- 여행지 다수 등록 가능하도록 수정

* test: 기획변경에 따른 여행 생성 API 수정에 따른 테스트 코드 수정